--- a/styles/playingWithComp.css
+++ b/styles/playingWithComp.css
@@ -155,3 +155,21 @@
   top: 3px;
   left: 3px;
 }
+
+.smooth-transition-turn {
+  animation-name: smooth-turn;
+  animation-duration: 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+
+@keyframes smooth-turn {
+  0% {
+    transform: translate(11px, -50px) rotate(45deg) scale(0.1)
+      skew(10deg, 10deg) rotateZ(-45deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg) scale(1) skew(0deg, 0deg);
+  }
+}
